Changed +jumpthrow to n0thing.
Added Dota 2 key bindings.

--- a/cs16.cfg
+++ b/cs16.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   May. 22, 2019   |   "
+echo "   |   Jul. 06, 2019   |   "
 
 // Launch: -freq 144 -nojoy
 
@@ -133,9 +133,6 @@ alias "xmedium" "cl_crosshair_size medium; alias xsize xsmall"
 alias "xlarge" "cl_crosshair_size large; alias xsize xmedium"
 alias "xsize" "xlarge"
 
-alias "+jumpthrow" "-attack; +jump"
-alias "-jumpthrow" "-jump"
-
 bind "0" "slot10"
 bind "1" "slot1"
 bind "2" "slot2"
@@ -200,7 +197,7 @@ unbind "\"
 bind "-" "xsize"
 bind "=" "dyn"
 unbind "ENTER"
-bind "SPACE" "+jump"
+bind "SPACE" "+jump; -attack;"
 unbind "BACKSPACE"
 bind "TAB" "+showscores"
 bind "CAPSLOCK" "+speed"
@@ -213,7 +210,7 @@ bind "END" "volume 0.2; echo - Volume: 20%"
 bind "PGDN" "volume 1; echo - Volume: 100%"
 bind "PAUSE" "pause"
 bind "SHIFT" "+duck"
-bind "ALT" "+jumpthrow"
+unbind "ALT"
 bind "CTRL" "+duck"
 unbind "WIN"
 unbind "UPARROW"
