--- a/css.cfg
+++ b/css.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Jun. 27, 2019   |   "
+echo "   |   Jul. 06, 2019   |   "
 
 // Launch: -freq 144 -nojoy -novid
 
@@ -167,9 +167,6 @@ lookstrafe "0"
 
 unbindall
 
-alias "+jumpthrow" "-attack; +jump"
-alias "-jumpthrow" "-jump"
-
 alias "+robocop" "cl_crosshairsize 450"
 alias "-robocop" "cl_crosshairsize 5.5"
 
@@ -237,7 +234,7 @@ bind "\" "toggle cl_crosshairdot 0 1"
 bind "-" "toggle cl_crosshairsize 4.5 2 1 5.5"
 bind "=" "toggle cl_crosshaircolor 0 1 4 5"
 unbind "ENTER"
-bind "SPACE" "+jump"
+bind "SPACE" "+jump; -attack;"
 bind "BACKSPACE" "toggle cl_showpos 1 0"
 bind "TAB" "+showscores"
 bind "CAPSLOCK" "+speed"
@@ -252,7 +249,7 @@ bind "PGDN" "volume 1.0; echo - Volume: 100%"
 bind "PAUSE" "pause"
 bind "SHIFT" "+duck"
 unbind "RSHIFT"
-bind "ALT" "+jumpthrow"
+unbind "ALT"
 bind "RALT" "+strafe"
 bind "CTRL" "+duck"
 unbind "RCTRL"
