--- a/napkincsgo.cfg
+++ b/napkincsgo.cfg
@@ -1,8 +1,8 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Jun. 27, 2019   |   "
+echo "   |   Jul. 06, 2019   |   "
 
-// Launch: -freq 240 +mat_software_aa_strength 0
+// Launch: -freq 240 -novid +mat_software_aa_strength 0
 
 
 ///////////////
@@ -248,9 +248,6 @@ lookstrafe "0"
 
 unbindall
 
-alias "+jumpthrow" "-attack; +jump"
-alias "-jumpthrow" "-jump"
-
 alias "+robocop" "cl_crosshairsize 450"
 alias "-robocop" "cl_crosshairsize 5.5"
 
@@ -318,7 +315,7 @@ bind "\" "toggle cl_crosshairdot 0 1"
 bind "-" "toggle cl_crosshairsize 2 1 5.5"
 bind "=" "toggle cl_crosshairstyle 2 0 1 5; toggle cl_crosshaircolor 0 3 5 1"
 unbind "ENTER"
-bind "SPACE" "+jump"
+bind "SPACE" "+jump; -attack;"
 bind "BACKSPACE" "toggle cl_showpos 1 0"
 bind "TAB" "+showscores"
 bind "CAPSLOCK" "+speed"
@@ -333,7 +330,7 @@ bind "PGDN" "volume 1.0; echo - Volume: 100%"
 unbind "PAUSE"
 bind "SHIFT" "+duck"
 unbind "RSHIFT"
-bind "ALT" "+jumpthrow"
+unbind "ALT"
 bind "RALT" "+strafe"
 bind "CTRL" "+duck"
 bind "RCTRL" "toggle safezonex 1.0 0.2"
