--- a/napkinpro.cfg
+++ b/napkinpro.cfg
@@ -1,8 +1,8 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Jun. 27, 2019   |   "
+echo "   |   Jul. 06, 2019   |   "
 
-// Launch: -freq 240 -tickrate 128 +mat_software_aa_strength 0
+// Launch: -freq 240 -tickrate 128 -novid +mat_software_aa_strength 0
 
 
 ///////////////
@@ -281,7 +281,7 @@ bind "t" "+use"
 bind "u" "messagemode2"
 bind "v" "r_cleardecals; +lookatweapon"
 bind "w" "+forward"
-bind "x" "-jump; toggle cl_crosshairsize 450 5.5"
+bind "x" "toggle cl_crosshairsize 450 5.5"
 bind "y" "messagemode"
 bind "z" "radio"
 bind "KP_INS" "buy vest"
@@ -312,7 +312,7 @@ bind "\" "toggle cl_crosshairdot 0 1"
 bind "-" "toggle cl_crosshairsize 2 1 5.5"
 bind "=" "toggle cl_crosshairstyle 2 0 1 5; toggle cl_crosshaircolor 0 3 5 1"
 unbind "ENTER"
-bind "SPACE" "+jump"
+bind "SPACE" "+jump; -attack;"
 bind "BACKSPACE" "toggle cl_showpos 1 0"
 bind "TAB" "+showscores"
 bind "CAPSLOCK" "+speed"
@@ -327,7 +327,7 @@ bind "PGDN" "volume 1.0; echo - Volume: 100%"
 unbind "PAUSE"
 bind "SHIFT" "+duck"
 unbind "RSHIFT"
-bind "ALT" "-attack; +jump"
+unbind "ALT"
 bind "RALT" "+strafe"
 bind "CTRL" "+duck"
 bind "RCTRL" "toggle safezonex 1.0 0.2"
