Reverted SPACE bind to allow for jump spraying.
Returned ALT key as jump throw bind.
Added -jump to "n0thing" to remove Unknown command: <key> spam.
Commented out CS:S cl_predict cheat convar.

--- a/cs16.cfg
+++ b/cs16.cfg
@@ -197,7 +197,7 @@ unbind "\"
 bind "-" "xsize"
 bind "=" "dyn"
 unbind "ENTER"
-bind "SPACE" "+jump; -attack;"
+bind "SPACE" "+jump"
 unbind "BACKSPACE"
 bind "TAB" "+showscores"
 bind "CAPSLOCK" "+speed"
@@ -210,7 +210,7 @@ bind "END" "volume 0.2; echo - Volume: 20%"
 bind "PGDN" "volume 1; echo - Volume: 100%"
 bind "PAUSE" "pause"
 bind "SHIFT" "+duck"
-unbind "ALT"
+bind "ALT" "+jump; -attack; -jump"
 bind "CTRL" "+duck"
 unbind "WIN"
 unbind "UPARROW"
