--- a/napkincss.cfg
+++ b/napkincss.cfg
@@ -18,7 +18,7 @@ cl_interp "0.000000"
 cl_interp_ratio "1.0"
 
 cl_lagcompensation "1"
-cl_predict "1"
+//cl_predict "1"
 cl_predictweapons "1"
 
 
@@ -234,7 +234,7 @@ bind "\" "toggle cl_crosshairdot 0 1"
 bind "-" "toggle cl_crosshairsize 4.5 2 1 5.5"
 bind "=" "toggle cl_crosshaircolor 0 1 4 5"
 unbind "ENTER"
-bind "SPACE" "+jump; -attack;"
+bind "SPACE" "+jump"
 bind "BACKSPACE" "toggle cl_showpos 1 0"
 bind "TAB" "+showscores"
 bind "CAPSLOCK" "+speed"
@@ -249,7 +249,7 @@ bind "PGDN" "volume 1.0; echo - Volume: 100%"
 bind "PAUSE" "pause"
 bind "SHIFT" "+duck"
 unbind "RSHIFT"
-unbind "ALT"
+bind "ALT" "+jump; -attack; -jump"
 bind "RALT" "+strafe"
 bind "CTRL" "+duck"
 unbind "RCTRL"
