Added -attack2 to jump throw.

--- a/csgolow.cfg
+++ b/csgolow.cfg
@@ -248,8 +248,8 @@ lookstrafe "0"
 
 unbindall
 
-alias "+robocop" "cl_crosshairsize 450"
-alias "-robocop" "cl_crosshairsize 4.5"
+//alias "+robocop" "cl_crosshairsize 450"
+//alias "-robocop" "cl_crosshairsize 4.5"
 
 bind "0" "slot10"
 bind "1" "slot1"
@@ -330,7 +330,7 @@ bind "PGDN" "volume 1.0; echo - Volume: 100%"
 unbind "PAUSE"
 bind "SHIFT" "+duck"
 unbind "RSHIFT"
-bind "ALT" "+jump; -attack; -jump"
+bind "ALT" "+jump; -attack; -attack2; -jump"
 bind "RALT" "+strafe"
 bind "CTRL" "+duck"
 bind "RCTRL" "toggle safezonex 1.0 0.2"
