--- a/napkincsgo.cfg
+++ b/napkincsgo.cfg
@@ -330,7 +330,7 @@ bind "PGDN" "volume 1.0; echo - Volume: 100%"
 unbind "PAUSE"
 bind "SHIFT" "+duck"
 unbind "RSHIFT"
-bind "ALT" "+jump; -attack; -jump"
+bind "ALT" "+jump; -attack; -attack2; -jump"
 bind "RALT" "+strafe"
 bind "CTRL" "+duck"
 bind "RCTRL" "toggle safezonex 1.0 0.2"
