Added sm_admin and noclip binds.

--- a/css.cfg
+++ b/css.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Jul. 06, 2019   |   "
+echo "   |   Jul. 10, 2019   |   "
 
 // Launch: -freq 144 -nojoy -novid
 
@@ -193,7 +193,7 @@ bind "j" "radio1; impulse 200"
 bind "k" "bind c +voicerecord"
 bind "l" "impulse 100"
 bind "m" "chooseteam"
-bind "n" "nightvision"
+bind "n" "nightvision; noclip; sm_noclip @me"
 bind "o" "cl_crosshairsize 0.5; cl_crosshairthickness 2; cl_crosshairdot 0; cl_crosshairspreadscale 0.05"
 bind "p" "cl_crosshairsize 1; cl_crosshairspreadscale 0.3"
 bind "q" "+attack2"
@@ -252,7 +252,7 @@ unbind "RSHIFT"
 bind "ALT" "+jump; -attack; -jump"
 bind "RALT" "+strafe"
 bind "CTRL" "+duck"
-unbind "RCTRL"
+bind "RCTRL" "sm_admin"
 unbind "LWIN"
 unbind "RWIN"
 unbind "APP"
