Changed radio to teleport binds.

--- a/css.cfg
+++ b/css.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Jul. 10, 2019   |   "
+echo "   |   Jul. 23, 2019   |   "
 
 // Launch: -freq 144 -nojoy -novid
 
@@ -167,29 +167,29 @@ lookstrafe "0"
 
 unbindall
 
-alias "+robocop" "cl_crosshairsize 450"
-alias "-robocop" "cl_crosshairsize 5.5"
+//alias "+robocop" "cl_crosshairsize 450"
+//alias "-robocop" "cl_crosshairsize 5.5"
 
 bind "0" "slot10"
 bind "1" "slot1"
 bind "2" "slot2"
 bind "3" "use weapon_flashbang"
 bind "4" "use weapon_hegrenade"
-bind "5" "+robocop; use weapon_smokegrenade"
+bind "5" "use weapon_smokegrenade"
 bind "6" "use weapon_c4"
 bind "7" "use weapon_c4"
 bind "8" "slot4"
 bind "9" "slot9"
 bind "a" "+moveleft"
 bind "b" "impulse 201"
-bind "c" "radio1"
+bind "c" "sm_cpsave"
 bind "d" "+moveright"
 bind "e" "slot3"
 bind "f" "incrementvar cl_righthand 0 1 1"
 bind "g" "drop"
 bind "h" "say_team Drop"
 bind "i" "cl_crosshaircolor 5; toggle cl_crosshaircolor_g 100 40 250; toggle cl_crosshaircolor_b 60 120 250"
-bind "j" "radio1; impulse 200"
+bind "j" "impulse 200"
 bind "k" "bind c +voicerecord"
 bind "l" "impulse 100"
 bind "m" "chooseteam"
@@ -205,7 +205,7 @@ bind "v" "r_cleardecals; impulse 100"
 bind "w" "+forward"
 bind "x" "radio3"
 bind "y" "messagemode"
-bind "z" "radio2"
+bind "z" "sm_cptele"
 bind "KP_INS" "buy vest"
 bind "KP_DEL" "buy vesthelm"
 bind "KP_END" "buy hegrenade"
