Changed cl_fixedcrosshairgap to 2.

--- a/csgo.cfg
+++ b/csgo.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Jul. 06, 2019   |   "
+echo "   |   Jul. 25, 2019   |   "
 
 // Launch: -freq 144 -tickrate 128 -novid
 
@@ -184,7 +184,7 @@ cl_playerspray_auto_apply "1"
 
 crosshair "1"
 cl_observercrosshair "1"
-cl_fixedcrosshairgap "3"
+cl_fixedcrosshairgap "2"
 
 cl_crosshair_sniper_width "2"
 cl_crosshair_sniper_show_normal_inaccuracy "0"
@@ -391,7 +391,7 @@ cl_obs_interp_enable "1"
 cl_showpluginmessages2 "0"
 
 mat_queue_mode "2"
-engine_no_focus_sleep "50"
+//engine_no_focus_sleep "50"
 
 lobby_default_privacy_bits2 "0"
 ui_setting_advertiseforhire_auto "0"
