--- a/csgolow.cfg
+++ b/csgolow.cfg
@@ -1,8 +1,8 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Jul. 25, 2019   |   "
+echo "   |   Aug. 02, 2019   |   "
 
-// Launch: -freq 144 -tickrate 128 -novid
+// Launch: -freq 144 -tickrate 128 -novid -disable_d3d9ex
 
 
 ///////////////
@@ -366,7 +366,7 @@ bind "MWHEELDOWN" "+jump"
 // Misc      //
 ///////////////
 
-developer "0"
+//developer "0"
 
 con_enable "1"
 con_timestamp "0"
@@ -388,12 +388,12 @@ cl_forcepreload "0"
 cl_freezecameffects_showholiday "0"
 
 cl_obs_interp_enable "1"
-cl_showpluginmessages2 "0"
+//cl_showpluginmessages2 "0"
 
 mat_queue_mode "2"
-//engine_no_focus_sleep "50"
+engine_no_focus_sleep "0"
 
-lobby_default_privacy_bits2 "0"
+//lobby_default_privacy_bits2 "0"
 ui_setting_advertiseforhire_auto "0"
 
 cl_clanid "2456601"
