--- a/csgolow.cfg
+++ b/csgolow.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Aug. 02, 2019   |   "
+echo "   |   Aug. 03, 2019   |   "
 
 // Launch: -freq 144 -tickrate 128 -novid -disable_d3d9ex
 
@@ -9,16 +9,16 @@ echo "   |   Aug. 02, 2019   |   "
 // Rates     //
 ///////////////
 
-mm_dedicated_search_maxping "300"
+mm_dedicated_search_maxping "300.000000"
 
 // SDR Override [-1 = UDP, 0 = Auto, 1 = SDR]
 net_client_steamdatagram_enable_override "-1"
 
 // Relay Servers [sgp, tyo, hkg, lax, eat, ord]
-// sdr SDRClient_ForceRelayCluster ""
+sdr SDRClient_ForceRelayCluster ""
 
 fps_max "500"
-fps_max_menu "120"
+fps_max_menu "150"
 
 rate "262144"
 cl_cmdrate "128"
@@ -32,150 +32,44 @@ cl_predictweapons "1"
 
 
 ///////////////
-// Sound     //
+// Audio     //
 ///////////////
 
-volume "1.0"
-
-snd_mix_async "1"
-snd_mixahead "0.020"
+volume "1.000000"
+snd_musicvolume_multiplier_inoverlay "0.000000"
+voice_caster_enable "0"
+voice_caster_scale "0.000000"
+snd_hwcompat "0"
+voice_enable "1"
+voice_scale "0.100000"
+voice_positional "1"
 snd_mute_losefocus "0"
 
-snd_deathcamera_volume "0.000000"
-snd_dzmusic_volume "0.000000"
-snd_mapobjective_volume "0.000000"
 snd_menumusic_volume "0.000000"
-snd_mvp_volume "0.000000"
-snd_roundend_volume "0.000000"
 snd_roundstart_volume "0.000000"
+snd_roundend_volume "0.000000"
+snd_mapobjective_volume "0.000000"
 snd_tensecondwarning_volume "0.000000"
+snd_deathcamera_volume "0.000000"
+snd_mvp_volume "0.000000"
+snd_mute_mvp_music_live_players "1"
+snd_dzmusic_volume "0.000000"
 
+dsp_enhance_stereo "0"
+snd_mix_async "1"
+snd_mixahead "0.020"
+
+snd_hrtf_distance_behind "100"
 snd_front_headphone_position "90.000000"
 snd_rear_headphone_position "90.000000"
 snd_headphone_pan_exponent "1.000000"
 snd_headphone_pan_radial_weight "1.000000"
 
-voice_enable "1"
 voice_forcemicrecord "1"
 voice_modenable "1"
 voice_mixer_boost "0"
 voice_mixer_mute "0"
 voice_mixer_volume "1.0"
-voice_scale "0.100000"
-voice_positional "1"
-
-dsp_enhance_stereo "0"
-snd_hwcompat "0"
-
-snd_hrtf_distance_behind "100"
-
-
-///////////////
-// Comms     //
-///////////////
-
-cl_mute_enemy_team "0"
-cl_mute_all_but_friends_and_party "0"
-cl_hide_avatar_images "2"
-cl_sanitize_player_names "0"
-
-
-///////////////
-// HUD       //
-///////////////
-
-safezonex "1.0"
-safezoney "1.0"
-
-hud_scaling "0.95"
-hud_showtargetid "1"
-
-cl_hud_radar_scale "1.3"
-
-cl_radar_always_centered "1"
-cl_radar_icon_scale_min "0.4"
-cl_radar_rotate "1"
-cl_radar_scale "0.7"
-cl_radar_square_with_scoreboard "1"
-
-cl_draw_only_deathnotices "0"
-cl_drawhud_force_radar "0"
-cl_drawhud_force_deathnotices "0"
-cl_showloadout "1"
-
-cl_teammate_colors_show "1"
-cl_teamid_overhead_always "1"
-
-cl_hud_bomb_under_radar "0"
-cl_hud_healthammo_style "1"
-
-cl_hud_playercount_pos "1"
-cl_hud_playercount_showcount "1"
-cl_color "3"
-
-cl_hud_color "6"
-cl_hud_background_alpha "0.0"
-
-cl_showfps "0"
-cl_showpos "0"
-
-net_graph "0"
-net_graphheight "0"
-net_graphpos "1"
-
-net_graphproportionalfont "1"
-net_graphtext "1"
-
-cpu_frequency_monitoring "0"
-
-
-///////////////
-// UI        //
-///////////////
-
-mat_monitorgamma "2.6"
-
-viewmodel_fov "60"
-viewmodel_offset_x "1"
-viewmodel_offset_y "1"
-viewmodel_offset_z "-1"
-viewmodel_presetpos "1"
-viewmodel_recoil "1.0"
-
-cl_viewmodel_shift_left_amt "1.5"
-cl_viewmodel_shift_right_amt "0.75"
-
-cl_bob_lower_amt "5"
-cl_bobcycle "0.98"
-cl_bobamt_lat "0.1"
-cl_bobamt_vert "0.1"
-
-option_duck_method "0"
-option_speed_method "0"
-
-r_drawtracers_firstperson "1"
-
-cl_autowepswitch "0"
-cl_righthand "1"
-
-closeonbuy "1"
-cl_use_opens_buy_menu "0"
-
-cl_scoreboard_mouse_enable_binding "+attack2"
-cl_scoreboard_survivors_always_on "1"
-
-ui_steam_overlay_notification_position "topright"
-gameinstructor_enable "0"
-
-cl_autohelp "1"
-cl_showhelp "0"
-
-spec_replay_autostart "0"
-
-mapoverview_allow_client_draw "0"
-mapoverview_allow_grid_usage "0"
-
-cl_playerspray_auto_apply "1"
 
 
 ///////////////
@@ -210,6 +104,111 @@ cl_crosshaircolor_b "250"
 
 cl_crosshairscale "0"
 cl_scalecrosshair "1"
+
+
+///////////////
+// HUD       //
+///////////////
+
+safezonex "1.0"
+safezoney "1.0"
+
+hud_showtargetid "1"
+hud_scaling "0.95"
+cl_hud_radar_scale "1.3"
+
+cl_radar_always_centered "1"
+cl_radar_icon_scale_min "0.4"
+cl_radar_rotate "1"
+cl_radar_scale "0.7"
+cl_radar_square_with_scoreboard "1"
+
+cl_draw_only_deathnotices "0"
+cl_drawhud_force_radar "0"
+cl_drawhud_force_deathnotices "0"
+
+cl_hud_color "6"
+cl_hud_background_alpha "0.0"
+cl_hud_bomb_under_radar "0"
+cl_hud_healthammo_style "1"
+cl_hud_playercount_pos "1"
+cl_hud_playercount_showcount "1"
+cl_showloadout "1"
+
+cl_autohelp "1"
+cl_showhelp "1"
+cl_showfps "0"
+cl_showpos "0"
+
+net_graph "0"
+net_graphheight "0"
+net_graphpos "1"
+net_graphproportionalfont "1"
+net_graphtext "1"
+
+
+///////////////
+// Team      //
+///////////////
+
+// Steam Group Clan Tag [0 = None, 2456601 = '∑:3']
+cl_clanid "2456601"
+
+cl_show_clan_in_death_notice "1"
+cl_teamid_overhead_always "1"
+cl_teammate_colors_show "1"
+cl_color "3"
+
+lobby_default_privacy_bits2 "0"
+ui_setting_advertiseforhire_auto "0"
+
+
+///////////////
+// Comms     //
+///////////////
+
+cl_player_ping_mute "0"
+cl_mute_enemy_team "0"
+cl_mute_all_but_friends_and_party "0"
+cl_hide_avatar_images "2"
+cl_sanitize_player_names "0"
+
+
+///////////////
+// UI/UX     //
+///////////////
+
+mat_monitorgamma "2.6"
+
+cl_autowepswitch "0"
+cl_righthand "1"
+
+closeonbuy "1"
+cl_use_opens_buy_menu "0"
+cl_playerspray_auto_apply "1"
+
+cl_scoreboard_mouse_enable_binding "+attack2"
+cl_scoreboard_survivors_always_on "1"
+
+option_duck_method "0"
+option_speed_method "0"
+
+viewmodel_fov "60"
+viewmodel_offset_x "1"
+viewmodel_offset_y "1"
+viewmodel_offset_z "-1"
+viewmodel_presetpos "1"
+viewmodel_recoil "1.0"
+
+cl_viewmodel_shift_left_amt "1.5"
+cl_viewmodel_shift_right_amt "0.75"
+
+cl_bob_lower_amt "5"
+cl_bobcycle "0.98"
+cl_bobamt_lat "0.1"
+cl_bobamt_vert "0.1"
+
+r_drawtracers_firstperson "1"
 
 
 ///////////////
@@ -322,11 +321,11 @@ bind "CAPSLOCK" "+speed"
 unbind "NUMLOCK"
 bind "ESCAPE" "cancelselect"
 bind "INS" "voice_enable 0; echo - Voice: 0%"
-bind "HOME" "voice_enable 1; voice_scale 0.1; echo - Voice: 10%"
-bind "PGUP" "voice_enable 1; voice_scale 0.75; echo - Voice: 75%"
-bind "DEL" "volume 0.0; echo - Volume: 0%"
-bind "END" "volume 0.2; echo - Volume: 20%"
-bind "PGDN" "volume 1.0; echo - Volume: 100%"
+bind "HOME" "voice_enable 1; voice_scale 0.100000; echo - Voice: 10%"
+bind "PGUP" "voice_enable 1; voice_scale 0.750000; echo - Voice: 75%"
+bind "DEL" "volume 0.000000; echo - Volume: 0%"
+bind "END" "volume 0.200000; echo - Volume: 20%"
+bind "PGDN" "volume 1.000000; echo - Volume: 100%"
 unbind "PAUSE"
 bind "SHIFT" "+duck"
 unbind "RSHIFT"
@@ -366,38 +365,39 @@ bind "MWHEELDOWN" "+jump"
 // Misc      //
 ///////////////
 
-//developer "0"
+developer "0"
 
 con_enable "1"
 con_timestamp "0"
-
 con_filter_enable "2"
 con_filter_text "Damage"
 con_filter_text_out "Player:"
 
-cl_downloadfilter "none"
-
 cl_allowdownload "1"
 cl_allowupload "1"
+cl_downloadfilter "none"
+cl_showpluginmessages2 "0"
 
-cl_disablefreezecam "1"
 cl_disablehtmlmotd "1"
+cl_disablefreezecam "1"
+cl_freezecameffects_showholiday "0"
 
 cl_forcepreload "0"
 
-cl_freezecameffects_showholiday "0"
-
-cl_obs_interp_enable "1"
-//cl_showpluginmessages2 "0"
-
 mat_queue_mode "2"
 engine_no_focus_sleep "0"
+cpu_frequency_monitoring "0"
 
-//lobby_default_privacy_bits2 "0"
-ui_setting_advertiseforhire_auto "0"
+mapoverview_allow_client_draw "0"
+mapoverview_allow_grid_usage "0"
+spec_replay_autostart "0"
+spec_usenumberkeys_nobinds "1"
+cl_spec_follow_grenade_key "0"
+cl_obs_interp_enable "0"
+//cl_obs_interp_pos_rate "0.27"
 
-cl_clanid "2456601"
-//cl_clanid "0"
+gameinstructor_enable "0"
+ui_steam_overlay_notification_position "topright"
 
 
 ///////////////
