Added crosshair thickness and player_ping.

--- a/csgolow.cfg
+++ b/csgolow.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Aug. 11, 2019   |   "
+echo "   |   Aug. 15, 2019   |   "
 
 // Launch: -freq 144 -tickrate 128 -novid -disable_d3d9ex
 
@@ -262,13 +262,13 @@ bind "8" "slot4"
 bind "9" "slot9"
 bind "a" "+moveleft"
 bind "b" "+spray_menu"
-unbind "c"
+bind "c" "player_ping"
 bind "d" "+moveright"
 bind "e" "slot3"
 bind "f" "incrementvar cl_radar_always_centered 0 1 1; incrementvar cl_radar_scale 0.3 0.7 0.4; incrementvar cl_righthand 0 1 1; incrementvar cl_teamid_overhead_always 1 2 1"
 bind "g" "drop"
 bind "h" "say_team Drop"
-bind "i" "cl_crosshaircolor 5; toggle cl_crosshaircolor_g 100 40 250; toggle cl_crosshaircolor_b 60 120 250"
+bind "i" "cl_crosshaircolor 5; toggle cl_crosshaircolor_g 0 100 40 250; toggle cl_crosshaircolor_b 0 60 120 250"
 bind "j" "impulse 200"
 bind "k" "+voicerecord"
 bind "l" "impulse 100"
@@ -336,7 +336,7 @@ bind "RCTRL" "toggle safezonex 1.0 0.2"
 unbind "LWIN"
 unbind "RWIN"
 unbind "APP"
-bind "UPARROW" "toggle cl_crosshaircolor 0 1"
+bind "UPARROW" "toggle cl_crosshairthickness 1 0.5"
 unbind "LEFTARROW"
 bind "DOWNARROW" "toggle cl_hud_color 0 1 2 3 4 5 6 7 8 9 10 11"
 unbind "RIGHTARROW"
