--- a/css.cfg
+++ b/css.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Jul. 23, 2019   |   "
+echo "   |   Aug. 15, 2019   |   "
 
 // Launch: -freq 144 -nojoy -novid
 
@@ -83,7 +83,7 @@ net_scale "5"
 
 
 ///////////////
-// UI        //
+// UI/UX     //
 ///////////////
 
 mat_monitorgamma "1.6"
@@ -188,7 +188,7 @@ bind "e" "slot3"
 bind "f" "incrementvar cl_righthand 0 1 1"
 bind "g" "drop"
 bind "h" "say_team Drop"
-bind "i" "cl_crosshaircolor 5; toggle cl_crosshaircolor_g 100 40 250; toggle cl_crosshaircolor_b 60 120 250"
+bind "i" "cl_crosshaircolor 5; toggle cl_crosshaircolor_g 0 100 40 250; toggle cl_crosshaircolor_b 0 60 120 250"
 bind "j" "impulse 200"
 bind "k" "bind c +voicerecord"
 bind "l" "impulse 100"
@@ -256,7 +256,7 @@ bind "RCTRL" "sm_admin"
 unbind "LWIN"
 unbind "RWIN"
 unbind "APP"
-bind "UPARROW" "incrementvar cl_crosshaircolor 0 1 1"
+bind "UPARROW" "toggle cl_crosshairthickness 1 0.5"
 unbind "LEFTARROW"
 bind "DOWNARROW" "toggle cl_dynamiccrosshair 0 1"
 unbind "RIGHTARROW"
