--- a/csgo-nocomments.cfg
+++ b/csgo-nocomments.cfg
@@ -1,40 +1,18 @@
-echo "                           "
 echo "   ---------------------   "
 echo "   |   Aug. 15, 2019   |   "
-
-// Launch: -freq 144 -tickrate 128 -novid -disable_d3d9ex
-
-
-///////////////
-// Rates     //
-///////////////
-
 mm_dedicated_search_maxping "300.000000"
-
-// SDR Override [-1 = UDP, 0 = Auto, 1 = SDR]
 net_client_steamdatagram_enable_override "-1"
-
-// Relay Servers [sgp, tyo, hkg, lax, eat, ord]
 sdr SDRClient_ForceRelayCluster ""
-
 fps_max "500"
 fps_max_menu "150"
-
 rate "262144"
 cl_cmdrate "128"
 cl_updaterate "128"
 cl_interp "0.000000"
 cl_interp_ratio "1.0"
-
 cl_lagcompensation "1"
 cl_predict "1"
 cl_predictweapons "1"
-
-
-///////////////
-// Audio     //
-///////////////
-
 volume "1.000000"
 snd_musicvolume_multiplier_inoverlay "0.000000"
 voice_caster_enable "0"
@@ -44,7 +22,6 @@ voice_enable "1"
 voice_scale "0.100000"
 voice_positional "1"
 snd_mute_losefocus "0"
-
 snd_menumusic_volume "0.000000"
 snd_roundstart_volume "0.000000"
 snd_roundend_volume "0.000000"
@@ -54,32 +31,22 @@ snd_deathcamera_volume "0.000000"
 snd_mvp_volume "0.000000"
 snd_mute_mvp_music_live_players "1"
 snd_dzmusic_volume "0.000000"
-
 dsp_enhance_stereo "0"
 snd_mix_async "1"
 snd_mixahead "0.020"
-
 snd_hrtf_distance_behind "100"
 snd_front_headphone_position "90.000000"
 snd_rear_headphone_position "90.000000"
 snd_headphone_pan_exponent "1.000000"
 snd_headphone_pan_radial_weight "1.000000"
-
 voice_forcemicrecord "1"
 voice_modenable "1"
 voice_mixer_boost "0"
 voice_mixer_mute "0"
 voice_mixer_volume "1.0"
-
-
-///////////////
-// Crosshair //
-///////////////
-
 crosshair "1"
 cl_observercrosshair "1"
 cl_fixedcrosshairgap "2"
-
 cl_crosshair_sniper_width "2"
 cl_crosshair_sniper_show_normal_inaccuracy "0"
 cl_crosshair_drawoutline "0"
@@ -101,32 +68,21 @@ cl_crosshaircolor "1"
 cl_crosshaircolor_r "250"
 cl_crosshaircolor_g "250"
 cl_crosshaircolor_b "250"
-
 cl_crosshairscale "0"
 cl_scalecrosshair "1"
-
-
-///////////////
-// HUD       //
-///////////////
-
 safezonex "1.0"
 safezoney "1.0"
-
 hud_showtargetid "1"
 hud_scaling "0.95"
 cl_hud_radar_scale "1.3"
-
 cl_radar_always_centered "1"
 cl_radar_icon_scale_min "0.4"
 cl_radar_rotate "1"
 cl_radar_scale "0.7"
 cl_radar_square_with_scoreboard "1"
-
 cl_draw_only_deathnotices "0"
 cl_drawhud_force_radar "0"
 cl_drawhud_force_deathnotices "0"
-
 cl_hud_color "6"
 cl_hud_background_alpha "0.0"
 cl_hud_bomb_under_radar "0"
@@ -134,96 +90,57 @@ cl_hud_healthammo_style "1"
 cl_hud_playercount_pos "1"
 cl_hud_playercount_showcount "1"
 cl_showloadout "1"
-
 cl_autohelp "1"
 cl_showhelp "1"
 cl_showfps "0"
 cl_showpos "0"
-
 net_graph "0"
 net_graphheight "1000"
 net_graphpos "2"
 net_graphproportionalfont "1"
 net_graphtext "1"
-
-
-///////////////
-// Team      //
-///////////////
-
-// Steam Group Clan Tag [0 = None, 2456601 = '∑:3']
 cl_clanid "2456601"
-
 cl_show_clan_in_death_notice "1"
 cl_teamid_overhead_always "1"
 cl_teammate_colors_show "1"
 cl_color "3"
-
 lobby_default_privacy_bits2 "0"
 ui_setting_advertiseforhire_auto "0"
-
-
-///////////////
-// Comms     //
-///////////////
-
 cl_player_ping_mute "0"
 cl_mute_enemy_team "0"
 cl_mute_all_but_friends_and_party "0"
 cl_hide_avatar_images "2"
 cl_sanitize_player_names "0"
-
-
-///////////////
-// UI/UX     //
-///////////////
-
 mat_monitorgamma "2.6"
-
 cl_autowepswitch "0"
 cl_righthand "1"
-
 closeonbuy "1"
 cl_use_opens_buy_menu "0"
 cl_playerspray_auto_apply "1"
-
 cl_scoreboard_mouse_enable_binding "+attack2"
 cl_scoreboard_survivors_always_on "1"
-
 option_duck_method "0"
 option_speed_method "0"
-
 viewmodel_fov "60"
 viewmodel_offset_x "1"
 viewmodel_offset_y "1"
 viewmodel_offset_z "-1"
 viewmodel_presetpos "1"
 viewmodel_recoil "1.0"
-
 cl_viewmodel_shift_left_amt "1.5"
 cl_viewmodel_shift_right_amt "0.75"
-
 cl_bob_lower_amt "5"
 cl_bobcycle "0.98"
 cl_bobamt_lat "0.1"
 cl_bobamt_vert "0.1"
-
 r_drawtracers_firstperson "1"
-
-
-///////////////
-// Mouse     //
-///////////////
-
 sensitivity "3.3425"
 zoom_sensitivity_ratio_mouse "1.0"
 zoom_sensitivity_ratio_joystick "1.0"
-
 cl_mouselook "1"
 joystick "0"
 joystick_force_disabled "1"
 joystick_force_disabled_set_from_options "1"
-
 m_customaccel "0"
 m_customaccel_exponent "1.05"
 m_customaccel_max "0"
@@ -231,25 +148,14 @@ m_customaccel_scale "0.04"
 m_forward "1"
 m_mouseaccel1 "0"
 m_mouseaccel2 "0"
-m_mousespeed "1"
+m_mousespeed "0"
 m_pitch "0.022"
 m_rawinput "1"
 m_side "0.8"
 m_yaw "0.022"
-
 lookspring "0"
 lookstrafe "0"
-
-
-///////////////
-// Bindings  //
-///////////////
-
 unbindall
-
-//alias "+robocop" "cl_crosshairsize 450"
-//alias "-robocop" "cl_crosshairsize 5.5"
-
 bind "0" "slot10"
 bind "1" "slot1"
 bind "2" "slot2"
@@ -262,7 +168,6 @@ bind "8" "slot4"
 bind "9" "slot9"
 bind "a" "+moveleft"
 bind "b" "+spray_menu"
-bind "c" "player_ping"
 bind "d" "+moveright"
 bind "e" "slot3"
 bind "f" "incrementvar cl_radar_always_centered 0 1 1; incrementvar cl_radar_scale 0.3 0.7 0.4; incrementvar cl_righthand 0 1 1; incrementvar cl_teamid_overhead_always 1 2 1"
@@ -304,8 +209,6 @@ bind "KP_PLUS" "say_team Lower"
 bind "KP_ENTER" "buymenu"
 bind "[" "toggle cl_crosshair_sniper_width 2 1"
 bind "]" "toggle cl_crosshairgap 0 -1 1"
-unbind "SEMICOLON"
-unbind "'"
 bind "`" "toggleconsole"
 bind "," "toggle mat_monitorgamma 1.6 2.6"
 bind "." "toggle hud_scaling 0.5 0.95"
@@ -313,12 +216,10 @@ bind "/" "toggle cl_hud_playercount_showcount 1 0"
 bind "\" "toggle cl_crosshairdot 0 1"
 bind "-" "toggle cl_crosshairsize 2 1 5.5"
 bind "=" "toggle cl_crosshairstyle 2 0 1 5; toggle cl_crosshaircolor 0 3 5 1"
-unbind "ENTER"
 bind "SPACE" "+jump"
 bind "BACKSPACE" "toggle cl_showpos 1 0"
 bind "TAB" "+showscores"
 bind "CAPSLOCK" "+speed"
-unbind "NUMLOCK"
 bind "ESCAPE" "cancelselect"
 bind "INS" "voice_enable 0; echo - Voice: 0%"
 bind "HOME" "voice_enable 1; voice_scale 0.100000; echo - Voice: 10%"
@@ -326,20 +227,13 @@ bind "PGUP" "voice_enable 1; voice_scale 0.750000; echo - Voice: 75%"
 bind "DEL" "volume 0.000000; echo - Volume: 0%"
 bind "END" "volume 0.200000; echo - Volume: 20%"
 bind "PGDN" "volume 1.000000; echo - Volume: 100%"
-unbind "PAUSE"
 bind "SHIFT" "+duck"
-unbind "RSHIFT"
 bind "ALT" "+jump; -attack; -attack2; -jump"
 bind "RALT" "+strafe"
 bind "CTRL" "+duck"
 bind "RCTRL" "toggle safezonex 1.0 0.2"
-unbind "LWIN"
-unbind "RWIN"
-unbind "APP"
 bind "UPARROW" "toggle cl_crosshairthickness 1 0.5"
-unbind "LEFTARROW"
 bind "DOWNARROW" "toggle cl_hud_color 0 1 2 3 4 5 6 7 8 9 10 11"
-unbind "RIGHTARROW"
 bind "F1" "use weapon_c4; drop"
 bind "F2" "slot9"
 bind "F3" "slot10"
@@ -350,8 +244,7 @@ bind "F7" "say_team Bomb go A"
 bind "F8" "say_team Bomb go B"
 bind "F9" "toggle net_graph 1 0"
 bind "F10" "quit prompt"
-bind "F11" "exec csgolow.cfg"
-bind "F12" "exec csgo.cfg"
+bind "F12" "exec csgo-nocomments.cfg"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "lastinv"
 bind "MOUSE3" "+lookatweapon"
@@ -359,53 +252,31 @@ bind "MOUSE4" "toggle mat_monitorgamma 1.6 2.6"
 bind "MOUSE5" "+attack2"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
-
-
-///////////////
-// Misc      //
-///////////////
-
 developer "0"
-
 con_enable "1"
 con_timestamp "0"
 con_filter_enable "2"
 con_filter_text "Damage"
 con_filter_text_out "Player:"
-
 cl_allowdownload "1"
 cl_allowupload "1"
 cl_downloadfilter "none"
 cl_showpluginmessages2 "0"
-
 cl_disablehtmlmotd "1"
 cl_disablefreezecam "1"
 cl_freezecameffects_showholiday "0"
-
 cl_forcepreload "0"
-
 mat_queue_mode "2"
 engine_no_focus_sleep "0"
 cpu_frequency_monitoring "0"
-
 mapoverview_allow_client_draw "0"
 mapoverview_allow_grid_usage "0"
 spec_replay_autostart "0"
 spec_usenumberkeys_nobinds "1"
 cl_spec_follow_grenade_key "0"
 cl_obs_interp_enable "0"
-//cl_obs_interp_pos_rate "0.27"
-
 gameinstructor_enable "0"
 ui_steam_overlay_notification_position "topright"
-
-
-///////////////
-// End       //
-///////////////
-
 play "buttons\weapon_confirm.wav"
-
-echo "   |  CATCSGO LOADED!  |   "
+echo "   | NOCOMMENTS LOADED |   "
 echo "   ---------------------   "
-echo "                           "
