--- a/csgo.cfg
+++ b/csgo.cfg
@@ -178,7 +178,7 @@ cl_sanitize_player_names "0"
 // UI/UX     //
 ///////////////
 
-mat_monitorgamma "1.6"
+mat_monitorgamma "2.2"
 
 cl_autowepswitch "0"
 cl_righthand "1"
@@ -307,7 +307,7 @@ bind "]" "toggle cl_crosshairgap 0 -1 1"
 unbind "SEMICOLON"
 unbind "'"
 bind "`" "toggleconsole"
-bind "," "toggle mat_monitorgamma 1.6 2.6"
+bind "," "toggle mat_monitorgamma 1.6 2.2 2.6"
 bind "." "toggle hud_scaling 0.5 0.95"
 bind "/" "toggle cl_hud_playercount_showcount 1 0"
 bind "\" "toggle cl_crosshairdot 0 1"
@@ -355,7 +355,7 @@ bind "F12" "exec csgo.cfg"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "lastinv"
 bind "MOUSE3" "+lookatweapon"
-bind "MOUSE4" "toggle mat_monitorgamma 1.6 2.6"
+bind "MOUSE4" "toggle mat_monitorgamma 1.6 2.2"
 bind "MOUSE5" "+attack2"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
