Changed mat_monitorgamma to 2.2 (default).

--- a/css.cfg
+++ b/css.cfg
@@ -86,7 +86,7 @@ net_scale "5"
 // UI/UX     //
 ///////////////
 
-mat_monitorgamma "1.6"
+mat_monitorgamma "2.2"
 mat_vsync "0"
 
 //viewmodel_fov "54"
@@ -227,8 +227,8 @@ unbind "]"
 unbind "SEMICOLON"
 unbind "'"
 bind "`" "toggleconsole"
-bind "," "buyammo1"
-bind "." "buyammo2"
+bind "," "toggle mat_monitorgamma 1.6 2.2 2.6"
+bind "." "buyammo1; buyammo2"
 unbind "/"
 bind "\" "toggle cl_crosshairdot 0 1"
 bind "-" "toggle cl_crosshairsize 4.5 2 1 5.5"
@@ -275,7 +275,7 @@ bind "F12" "exec css.cfg"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "lastinv"
 bind "MOUSE3" "impulse 100"
-bind "MOUSE4" "incrementvar mat_monitorgamma 1.6 2.7 1"
+bind "MOUSE4" "toggle mat_monitorgamma 1.6 2.2"
 bind "MOUSE5" "+attack2"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
