Added sound queue to css.cfg.
* Sorry for commit spam, github.

--- a/css.cfg
+++ b/css.cfg
@@ -315,6 +315,8 @@ cl_clanid "2456601"
 // End       //
 ///////////////
 
+play "buttons\weapon_confirm.wav"
+
 echo "   |  CAT CSS LOADED!  |   "
 echo "   ---------------------   "
 echo "                           "
