--- a/bhopserver.cfg
+++ b/bhopserver.cfg
@@ -1,6 +1,6 @@
 echo
 echo "   ---------------------   "
-echo "   |   Mar. 20, 2018   |   "
+echo "   |   Aug. 24, 2019   |   "
 
 bot_kick
 mp_drop_knife_enable 1
@@ -11,6 +11,7 @@ sv_autobunnyhopping 1
 sv_airaccelerate 100
 sv_staminajumpcost 0.080
 sv_staminalandcost 0.050
+sv_falldamage_scale 0
 sv_ladder_scale_speed 1
 sv_clamp_unsafe_velocities 0
 sv_friction 4
