Added cl_invites_only convars.

--- a/csgo.cfg
+++ b/csgo.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Aug. 24, 2019   |   "
+echo "   |   Sep. 01, 2019   |   "
 
 // Launch: -freq 144 -tickrate 128 -novid -disable_d3d9ex
 
@@ -17,8 +17,8 @@ net_client_steamdatagram_enable_override "-1"
 // Relay Servers [sgp, tyo, hkg, lax, eat, ord]
 sdr SDRClient_ForceRelayCluster ""
 
-fps_max "500"
-fps_max_menu "150"
+//fps_max "500"
+//fps_max_menu "150"
 
 rate "262144"
 cl_cmdrate "128"
@@ -161,6 +161,8 @@ cl_color "3"
 
 lobby_default_privacy_bits2 "0"
 ui_setting_advertiseforhire_auto "0"
+cl_invites_only_friends "1"
+cl_invites_only_mainmenu "0"
 
 
 ///////////////
