--- a/csgo.cfg
+++ b/csgo.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Sep. 01, 2019   |   "
+echo "   |   Sep. 13, 2019   |   "
 
 // Launch: -freq 144 -tickrate 128 -novid -disable_d3d9ex
 
@@ -17,8 +17,8 @@ net_client_steamdatagram_enable_override "-1"
 // Relay Servers [sgp, tyo, hkg, lax, eat, ord]
 sdr SDRClient_ForceRelayCluster ""
 
-//fps_max "500"
-//fps_max_menu "150"
+fps_max "500"
+fps_max_menu "150"
 
 rate "262144"
 cl_cmdrate "128"
