--- a/train.cfg
+++ b/train.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Jun. 29, 2019   |   "
+echo "   |   Sep. 20, 2019   |   "
 
 
 game_type 0
@@ -25,6 +25,7 @@ sv_showimpacts 3
 sv_showimpacts_time 20
 sv_showlagcompensation 0
 
+cl_grenadepreview 1
 cl_crosshair_recoil 0
 cl_weapon_debug_show_accuracy 1
 weapon_accuracy_nospread 0
