--- a/csgolow.cfg
+++ b/csgolow.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Sep. 16, 2019   |   "
+echo "   |   Sep. 26, 2019   |   "
 
 // Launch: -freq 144 -tickrate 128 -novid -disable_d3d9ex
 
@@ -155,7 +155,7 @@ net_graphtext "1"
 cl_clanid "2456601"
 
 cl_show_clan_in_death_notice "1"
-cl_teamid_overhead_always "1"
+cl_teamid_overhead_mode "1"
 cl_teammate_colors_show "1"
 cl_color "3"
 
@@ -267,7 +267,7 @@ bind "b" "+spray_menu"
 bind "c" "player_ping"
 bind "d" "+moveright"
 bind "e" "slot3"
-bind "f" "incrementvar cl_radar_always_centered 0 1 1; incrementvar cl_radar_scale 0.3 0.7 0.4; incrementvar cl_righthand 0 1 1; incrementvar cl_teamid_overhead_always 1 2 1"
+bind "f" "incrementvar cl_radar_always_centered 0 1 1; incrementvar cl_radar_scale 0.3 0.7 0.4; incrementvar cl_righthand 0 1 1; incrementvar cl_teamid_overhead_mode 1 2 1"
 bind "g" "drop"
 bind "h" "say_team Drop"
 bind "i" "cl_crosshaircolor 5; toggle cl_crosshaircolor_g 0 100 40 250; toggle cl_crosshaircolor_b 0 60 120 250"
