Removed trailing zeros.
Changed fps_max_menu back to 150 for testing.
Updated Napkin configs.

--- a/csgo.cfg
+++ b/csgo.cfg
@@ -1,15 +1,15 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Sep. 26, 2019   |   "
+echo "   |   Oct. 03, 2019   |   "
 
-// Launch: -freq 144 -tickrate 128 -novid -disable_d3d9ex
+// Launch: -freq 144 -novid -nojoy -tickrate 128 -disable_d3d9ex
 
 
 ///////////////
 // Rates     //
 ///////////////
 
-mm_dedicated_search_maxping "300.000000"
+mm_dedicated_search_maxping "300"
 
 // SDR Override [-1 = UDP, 0 = Auto, 1 = SDR]
 net_client_steamdatagram_enable_override "-1"
@@ -18,13 +18,13 @@ net_client_steamdatagram_enable_override "-1"
 sdr SDRClient_ForceRelayCluster ""
 
 fps_max "500"
-fps_max_menu "500"
+fps_max_menu "150"
 
 rate "262144"
 cl_cmdrate "128"
 cl_updaterate "128"
-cl_interp "0.000000"
-cl_interp_ratio "1.0"
+cl_interp "0"
+cl_interp_ratio "1"
 
 cl_lagcompensation "1"
 cl_predict "1"
@@ -35,25 +35,25 @@ cl_predictweapons "1"
 // Audio     //
 ///////////////
 
-volume "1.000000"
-snd_musicvolume_multiplier_inoverlay "0.000000"
+volume "1"
+snd_musicvolume_multiplier_inoverlay "0"
 voice_caster_enable "0"
-voice_caster_scale "0.000000"
+voice_caster_scale "0"
 snd_hwcompat "0"
 voice_enable "1"
-voice_scale "0.100000"
+voice_scale "0.1"
 voice_positional "1"
 snd_mute_losefocus "0"
 
-snd_menumusic_volume "0.000000"
-snd_roundstart_volume "0.000000"
-snd_roundend_volume "0.000000"
-snd_mapobjective_volume "0.000000"
-snd_tensecondwarning_volume "0.000000"
-snd_deathcamera_volume "0.000000"
-snd_mvp_volume "0.000000"
+snd_menumusic_volume "0"
+snd_roundstart_volume "0"
+snd_roundend_volume "0"
+snd_mapobjective_volume "0"
+snd_tensecondwarning_volume "0"
+snd_deathcamera_volume "0"
+snd_mvp_volume "0"
 snd_mute_mvp_music_live_players "1"
-snd_dzmusic_volume "0.000000"
+snd_dzmusic_volume "0"
 
 dsp_enhance_stereo "0"
 snd_mix_async "1"
@@ -83,9 +83,9 @@ cl_fixedcrosshairgap "2"
 cl_crosshair_sniper_width "2"
 cl_crosshair_sniper_show_normal_inaccuracy "0"
 cl_crosshair_drawoutline "0"
-cl_crosshair_outlinethickness "1.0"
+cl_crosshair_outlinethickness "1"
 cl_crosshair_dynamic_maxdist_splitratio "0.25"
-cl_crosshair_dynamic_splitalpha_innermod "1.0"
+cl_crosshair_dynamic_splitalpha_innermod "1"
 cl_crosshair_dynamic_splitalpha_outermod "0.5"
 cl_crosshair_dynamic_splitdist "3"
 cl_crosshair_t "0"
@@ -128,7 +128,7 @@ cl_drawhud_force_radar "0"
 cl_drawhud_force_deathnotices "0"
 
 cl_hud_color "6"
-cl_hud_background_alpha "0.0"
+cl_hud_background_alpha "0"
 cl_hud_bomb_under_radar "0"
 cl_hud_healthammo_style "1"
 cl_hud_playercount_pos "1"
@@ -323,11 +323,11 @@ bind "CAPSLOCK" "+speed"
 unbind "NUMLOCK"
 bind "ESCAPE" "cancelselect"
 bind "INS" "voice_enable 0; echo - Voice: 0%"
-bind "HOME" "voice_enable 1; voice_scale 0.100000; echo - Voice: 10%"
-bind "PGUP" "voice_enable 1; voice_scale 0.750000; echo - Voice: 75%"
-bind "DEL" "volume 0.000000; echo - Volume: 0%"
-bind "END" "volume 0.200000; echo - Volume: 20%"
-bind "PGDN" "volume 1.000000; echo - Volume: 100%"
+bind "HOME" "voice_enable 1; voice_scale 0.10; echo - Voice: 10%"
+bind "PGUP" "voice_enable 1; voice_scale 0.75; echo - Voice: 75%"
+bind "DEL" "volume 0; echo - Volume: 0%"
+bind "END" "volume 0.2; echo - Volume: 20%"
+bind "PGDN" "volume 1; echo - Volume: 100%"
 unbind "PAUSE"
 bind "SHIFT" "+duck"
 unbind "RSHIFT"
