--- a/napkinpro.cfg
+++ b/napkinpro.cfg
@@ -1,8 +1,8 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Jul. 25, 2019   |   "
+echo "   |   Oct. 03, 2019   |   "
 
-// Launch: -freq 240 -tickrate 128 -novid +mat_software_aa_strength 0
+// Launch: -freq 240 -novid -tickrate 128 +mat_software_aa_strength 0
 
 
 ///////////////
@@ -23,8 +23,8 @@ fps_max_menu "120"
 rate "786432"
 cl_cmdrate "128"
 cl_updaterate "128"
-cl_interp "0.000000"
-cl_interp_ratio "1.0"
+cl_interp "0"
+cl_interp_ratio "1"
 
 cl_lagcompensation "1"
 cl_predict "1"
@@ -32,150 +32,44 @@ cl_predictweapons "1"
 
 
 ///////////////
-// Sound     //
+// Audio     //
 ///////////////
 
-volume "1.0"
-
-snd_mix_async "1"
-snd_mixahead "0.020"
+volume "1"
+snd_musicvolume_multiplier_inoverlay "0"
+voice_caster_enable "0"
+voice_caster_scale "0"
+snd_hwcompat "0"
+voice_enable "1"
+voice_scale "0.1"
+voice_positional "1"
 snd_mute_losefocus "0"
 
-snd_deathcamera_volume "0.000000"
-snd_dzmusic_volume "0.000000"
-snd_mapobjective_volume "0.000000"
-snd_menumusic_volume "0.000000"
-snd_mvp_volume "0.000000"
-snd_roundend_volume "0.000000"
-snd_roundstart_volume "0.000000"
-snd_tensecondwarning_volume "0.000000"
+snd_menumusic_volume "0"
+snd_roundstart_volume "0"
+snd_roundend_volume "0"
+snd_mapobjective_volume "0"
+snd_tensecondwarning_volume "0"
+snd_deathcamera_volume "0"
+snd_mvp_volume "0"
+snd_mute_mvp_music_live_players "1"
+snd_dzmusic_volume "0"
 
+dsp_enhance_stereo "0"
+snd_mix_async "1"
+snd_mixahead "0.020"
+
+snd_hrtf_distance_behind "100"
 snd_front_headphone_position "90.000000"
 snd_rear_headphone_position "90.000000"
 snd_headphone_pan_exponent "1.000000"
 snd_headphone_pan_radial_weight "1.000000"
 
-voice_enable "1"
 voice_forcemicrecord "1"
 voice_modenable "1"
 voice_mixer_boost "0"
 voice_mixer_mute "0"
 voice_mixer_volume "1.0"
-voice_scale "0.100000"
-voice_positional "1"
-
-dsp_enhance_stereo "0"
-snd_hwcompat "0"
-
-snd_hrtf_distance_behind "100"
-
-
-///////////////
-// Comms     //
-///////////////
-
-cl_mute_enemy_team "0"
-cl_mute_all_but_friends_and_party "0"
-cl_hide_avatar_images "2"
-cl_sanitize_player_names "0"
-
-
-///////////////
-// HUD       //
-///////////////
-
-safezonex "1.0"
-safezoney "1.0"
-
-hud_scaling "0.95"
-hud_showtargetid "1"
-
-cl_hud_radar_scale "1.3"
-
-cl_radar_always_centered "1"
-cl_radar_icon_scale_min "0.4"
-cl_radar_rotate "1"
-cl_radar_scale "0.7"
-cl_radar_square_with_scoreboard "1"
-
-cl_draw_only_deathnotices "0"
-cl_drawhud_force_radar "0"
-cl_drawhud_force_deathnotices "0"
-cl_showloadout "1"
-
-cl_teammate_colors_show "1"
-cl_teamid_overhead_always "1"
-
-cl_hud_bomb_under_radar "0"
-cl_hud_healthammo_style "1"
-
-cl_hud_playercount_pos "1"
-cl_hud_playercount_showcount "1"
-cl_color "1"
-
-cl_hud_color "10"
-cl_hud_background_alpha "0.25"
-
-cl_showfps "0"
-cl_showpos "0"
-
-net_graph "0"
-net_graphheight "0"
-net_graphpos "1"
-
-net_graphproportionalfont "1"
-net_graphtext "1"
-
-cpu_frequency_monitoring "0"
-
-
-///////////////
-// UI        //
-///////////////
-
-mat_monitorgamma "2.0"
-
-viewmodel_fov "60"
-viewmodel_offset_x "1"
-viewmodel_offset_y "1"
-viewmodel_offset_z "-1"
-viewmodel_presetpos "1"
-viewmodel_recoil "1.0"
-
-cl_viewmodel_shift_left_amt "1.5"
-cl_viewmodel_shift_right_amt "0.75"
-
-cl_bob_lower_amt "5"
-cl_bobcycle "0.98"
-cl_bobamt_lat "0.1"
-cl_bobamt_vert "0.1"
-
-option_duck_method "0"
-option_speed_method "0"
-
-r_drawtracers_firstperson "1"
-
-cl_autowepswitch "0"
-cl_righthand "1"
-
-closeonbuy "1"
-cl_use_opens_buy_menu "0"
-
-cl_scoreboard_mouse_enable_binding "+attack2"
-cl_scoreboard_survivors_always_on "1"
-
-ui_steam_overlay_notification_position "topright"
-gameinstructor_enable "0"
-
-cl_autohelp "1"
-cl_showhelp "0"
-
-spec_replay_autostart "0"
-
-mapoverview_allow_client_draw "0"
-mapoverview_allow_grid_usage "0"
-
-cl_playerspray_auto_apply "1"
 
 
 ///////////////
@@ -189,9 +83,9 @@ cl_fixedcrosshairgap "2"
 cl_crosshair_sniper_width "2"
 cl_crosshair_sniper_show_normal_inaccuracy "0"
 cl_crosshair_drawoutline "0"
-cl_crosshair_outlinethickness "1.0"
+cl_crosshair_outlinethickness "1"
 cl_crosshair_dynamic_maxdist_splitratio "0.25"
-cl_crosshair_dynamic_splitalpha_innermod "1.0"
+cl_crosshair_dynamic_splitalpha_innermod "1"
 cl_crosshair_dynamic_splitalpha_outermod "0.5"
 cl_crosshair_dynamic_splitdist "3"
 cl_crosshair_t "0"
@@ -210,6 +104,113 @@ cl_crosshaircolor_b "250"
 
 cl_crosshairscale "0"
 cl_scalecrosshair "1"
+
+
+///////////////
+// HUD       //
+///////////////
+
+safezonex "1.0"
+safezoney "1.0"
+
+hud_showtargetid "1"
+hud_scaling "0.95"
+cl_hud_radar_scale "1.3"
+
+cl_radar_always_centered "1"
+cl_radar_icon_scale_min "0.4"
+cl_radar_rotate "1"
+cl_radar_scale "0.7"
+cl_radar_square_with_scoreboard "1"
+
+cl_draw_only_deathnotices "0"
+cl_drawhud_force_radar "0"
+cl_drawhud_force_deathnotices "0"
+
+cl_hud_color "10"
+cl_hud_background_alpha "0.25"
+cl_hud_bomb_under_radar "0"
+cl_hud_healthammo_style "1"
+cl_hud_playercount_pos "1"
+cl_hud_playercount_showcount "1"
+cl_showloadout "1"
+
+cl_autohelp "1"
+cl_showhelp "1"
+cl_showfps "0"
+cl_showpos "0"
+
+net_graph "0"
+net_graphheight "0"
+net_graphpos "1"
+net_graphproportionalfont "1"
+net_graphtext "1"
+
+
+///////////////
+// Team      //
+///////////////
+
+// Steam Group Clan Tag [0 = None, 2456601 = '∑:3']
+cl_clanid "2456601"
+
+cl_show_clan_in_death_notice "1"
+cl_teamid_overhead_mode "1"
+cl_teammate_colors_show "1"
+cl_color "1"
+
+lobby_default_privacy_bits2 "0"
+ui_setting_advertiseforhire_auto "0"
+cl_invites_only_friends "1"
+cl_invites_only_mainmenu "0"
+
+
+///////////////
+// Comms     //
+///////////////
+
+cl_player_ping_mute "0"
+cl_mute_enemy_team "0"
+cl_mute_all_but_friends_and_party "0"
+cl_hide_avatar_images "2"
+cl_sanitize_player_names "0"
+
+
+///////////////
+// UI/UX     //
+///////////////
+
+mat_monitorgamma "2.0"
+
+cl_autowepswitch "0"
+cl_righthand "1"
+
+closeonbuy "1"
+cl_use_opens_buy_menu "0"
+cl_playerspray_auto_apply "1"
+
+cl_scoreboard_mouse_enable_binding "+attack2"
+cl_scoreboard_survivors_always_on "1"
+
+option_duck_method "0"
+option_speed_method "0"
+
+viewmodel_fov "60"
+viewmodel_offset_x "1"
+viewmodel_offset_y "1"
+viewmodel_offset_z "-1"
+viewmodel_presetpos "1"
+viewmodel_recoil "1.0"
+
+cl_viewmodel_shift_left_amt "1.5"
+cl_viewmodel_shift_right_amt "0.75"
+
+cl_bob_lower_amt "5"
+cl_bobcycle "0.98"
+cl_bobamt_lat "0.1"
+cl_bobamt_vert "0.1"
+
+r_drawtracers_firstperson "1"
 
 
 ///////////////
@@ -260,13 +261,13 @@ bind "8" "slot4"
 bind "9" "slot9"
 bind "a" "+moveleft"
 bind "b" "+spray_menu"
-unbind "c"
+bind "c" "player_ping"
 bind "d" "+moveright"
 bind "e" "slot3"
-bind "f" "incrementvar cl_radar_always_centered 0 1 1; incrementvar cl_radar_scale 0.3 0.7 0.4; incrementvar cl_righthand 0 1 1; incrementvar cl_teamid_overhead_always 1 2 1"
+bind "f" "incrementvar cl_radar_always_centered 0 1 1; incrementvar cl_radar_scale 0.3 0.7 0.4; incrementvar cl_righthand 0 1 1; incrementvar cl_teamid_overhead_mode 1 2 1"
 bind "g" "drop"
 bind "h" "say_team Drop"
-bind "i" "cl_crosshaircolor 5; toggle cl_crosshaircolor_g 100 40 250; toggle cl_crosshaircolor_b 60 120 250"
+bind "i" "cl_crosshaircolor 5; toggle cl_crosshaircolor_g 0 100 40 250; toggle cl_crosshaircolor_b 0 60 120 250"
 unbind "j"
 bind "k" "+voicerecord"
 unbind "l"
@@ -305,7 +306,7 @@ bind "]" "toggle cl_crosshairgap 0 -1 1"
 unbind "SEMICOLON"
 unbind "'"
 bind "`" "toggleconsole"
-bind "," "toggle mat_monitorgamma 1.6 2.6"
+bind "," "toggle mat_monitorgamma 1.6 2.2 2.6"
 bind "." "toggle hud_scaling 0.5 0.95"
 bind "/" "toggle cl_hud_playercount_showcount 1 0"
 bind "\" "toggle cl_crosshairdot 0 1"
@@ -321,9 +322,9 @@ bind "ESCAPE" "cancelselect"
 bind "INS" "voice_enable 0; echo - Voice: 0%"
 bind "HOME" "voice_enable 1; voice_scale 0.1; echo - Voice: 10%"
 bind "PGUP" "voice_enable 1; voice_scale 0.5; echo - Voice: 50%"
-bind "DEL" "volume 0.0; echo - Volume: 0%"
+bind "DEL" "volume 0; echo - Volume: 0%"
 bind "END" "volume 0.2; echo - Volume: 20%"
-bind "PGDN" "volume 1.0; echo - Volume: 100%"
+bind "PGDN" "volume 1; echo - Volume: 100%"
 unbind "PAUSE"
 bind "SHIFT" "+duck"
 unbind "RSHIFT"
@@ -334,7 +335,7 @@ bind "RCTRL" "toggle safezonex 1.0 0.2"
 unbind "LWIN"
 unbind "RWIN"
 unbind "APP"
-bind "UPARROW" "toggle cl_crosshaircolor 0 1"
+bind "UPARROW" "toggle cl_crosshairthickness 1 0.5"
 unbind "LEFTARROW"
 bind "DOWNARROW" "toggle cl_hud_color 0 1 2 3 4 5 6 7 8 9 10 11"
 unbind "RIGHTARROW"
@@ -367,34 +368,33 @@ developer "0"
 
 con_enable "1"
 con_timestamp "0"
-
 con_filter_enable "2"
 con_filter_text "Damage"
 con_filter_text_out "Player:"
 
-cl_downloadfilter "none"
-
 cl_allowdownload "1"
 cl_allowupload "1"
+cl_downloadfilter "all"
+cl_showpluginmessages2 "0"
 
-cl_disablefreezecam "1"
 cl_disablehtmlmotd "1"
+cl_disablefreezecam "1"
+cl_freezecameffects_showholiday "0"
 
 cl_forcepreload "0"
 
-cl_freezecameffects_showholiday "0"
-
-cl_obs_interp_enable "1"
-cl_showpluginmessages2 "0"
-
 mat_queue_mode "2"
 engine_no_focus_sleep "0"
+cpu_frequency_monitoring "0"
 
-lobby_default_privacy_bits2 "0"
-ui_setting_advertiseforhire_auto "0"
+spec_replay_autostart "0"
+spec_usenumberkeys_nobinds "1"
+cl_spec_follow_grenade_key "0"
+cl_obs_interp_enable "0"
+//cl_obs_interp_pos_rate "0.27"
 
-cl_clanid "2456601"
-//cl_clanid "0"
+gameinstructor_enable "0"
+ui_steam_overlay_notification_position "topright"
 
 
 ///////////////
