--- a/ryan.cfg
+++ b/ryan.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Aug. 10, 2019   |   "
+echo "   |   Oct. 03, 2019   |   "
 
 // Launch: -freq 144 -novid
 
@@ -15,8 +15,8 @@ fps_max_menu "120"
 rate "786432"
 cl_cmdrate "128"
 cl_updaterate "128"
-cl_interp "0.000000"
-cl_interp_ratio "1.0"
+cl_interp "0"
+cl_interp_ratio "1"
 
 cl_lagcompensation "1"
 cl_predict "1"
@@ -27,25 +27,25 @@ cl_predictweapons "1"
 // Audio     //
 ///////////////
 
-volume "1.000000"
-snd_musicvolume_multiplier_inoverlay "0.100000"
+volume "1"
+snd_musicvolume_multiplier_inoverlay "0.1"
 voice_caster_enable "0"
-voice_caster_scale "1.000000"
+voice_caster_scale "1"
 snd_hwcompat "0"
 voice_enable "1"
-voice_scale "0.400000"
+voice_scale "0.4"
 voice_positional "0"
 snd_mute_losefocus "0"
 
-snd_menumusic_volume "0.000000"
-snd_roundstart_volume "0.000000"
-snd_roundend_volume "0.000000"
-snd_mapobjective_volume "0.000000"
-snd_tensecondwarning_volume "0.300000"
-snd_deathcamera_volume "0.000000"
-snd_mvp_volume "1.000000"
+snd_menumusic_volume "0"
+snd_roundstart_volume "0"
+snd_roundend_volume "0"
+snd_mapobjective_volume "0"
+snd_tensecondwarning_volume "0.3"
+snd_deathcamera_volume "0"
+snd_mvp_volume "1"
 snd_mute_mvp_music_live_players "1"
-snd_dzmusic_volume "0.200000"
+snd_dzmusic_volume "0.2"
 
 dsp_enhance_stereo "0"
 snd_mix_async "1"
@@ -69,9 +69,9 @@ cl_fixedcrosshairgap "-3"
 cl_crosshair_sniper_width "1"
 cl_crosshair_sniper_show_normal_inaccuracy "0"
 cl_crosshair_drawoutline "1"
-cl_crosshair_outlinethickness "1.0"
-cl_crosshair_dynamic_maxdist_splitratio "0.0"
-cl_crosshair_dynamic_splitalpha_innermod "1.0"
+cl_crosshair_outlinethickness "1"
+cl_crosshair_dynamic_maxdist_splitratio "0"
+cl_crosshair_dynamic_splitalpha_innermod "1"
 cl_crosshair_dynamic_splitalpha_outermod "0.3"
 cl_crosshair_dynamic_splitdist "3.5"
 cl_crosshair_t "0"
@@ -109,8 +109,12 @@ cl_radar_rotate "1"
 cl_radar_scale "0.5"
 cl_radar_square_with_scoreboard "1"
 
+cl_draw_only_deathnotices "0"
+cl_drawhud_force_radar "0"
+cl_drawhud_force_deathnotices "0"
+
 cl_hud_color "1"
-cl_hud_background_alpha "1.000000"
+cl_hud_background_alpha "1"
 cl_hud_bomb_under_radar "0"
 cl_hud_healthammo_style "1"
 cl_hud_playercount_pos "0"
@@ -137,12 +141,14 @@ net_graphtext "1"
 cl_clanid "2456601"
 
 cl_show_clan_in_death_notice "1"
-cl_teamid_overhead_always "1"
+cl_teamid_overhead_mode "1"
 cl_teammate_colors_show "1"
 cl_color "0"
 
 lobby_default_privacy_bits2 "1"
 ui_setting_advertiseforhire_auto "1"
+cl_invites_only_friends "1"
+cl_invites_only_mainmenu "0"
 
 
 ///////////////
@@ -182,7 +188,7 @@ r_drawtracers_firstperson "1"
 // Mouse     //
 ///////////////
 
-sensitivity "3.000000"
+sensitivity "3"
 zoom_sensitivity_ratio_mouse "1.0"
 zoom_sensitivity_ratio_joystick "1.0"
 
