--- a/napkincsgo.cfg
+++ b/napkincsgo.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Oct. 03, 2019   |   "
+echo "   |   Oct. 08, 2019   |   "
 
 // Launch: -freq 240 -novid +mat_software_aa_strength 0
 
@@ -88,6 +88,7 @@ cl_crosshair_dynamic_maxdist_splitratio "0.25"
 cl_crosshair_dynamic_splitalpha_innermod "1"
 cl_crosshair_dynamic_splitalpha_outermod "0.5"
 cl_crosshair_dynamic_splitdist "3"
+cl_crosshair_friendly_warning "0"
 cl_crosshair_t "0"
 cl_crosshairdot "1"
 cl_crosshairgap "1"
