--- a/csgo.cfg
+++ b/csgo.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Nov. 04, 2019   |   "
+echo "   |   Nov. 08, 2019   |   "
 
 // Launch: -freq 144 -novid -nojoy -tickrate 128 -disable_d3d9ex
 
@@ -223,7 +223,7 @@ zoom_sensitivity_ratio_mouse "1.0"
 zoom_sensitivity_ratio_joystick "1.0"
 
 cl_mouselook "1"
-joystick "0"
+//joystick "0"
 joystick_force_disabled "1"
 joystick_force_disabled_set_from_options "1"
 
