Removed Steam Datagram Relay command.

--- a/dylancsgo.cfg
+++ b/dylancsgo.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Nov. 04, 2019   |   "
+echo "   |   Nov. 28, 2019   |   "
 
 // Launch: -freq 60 -novid -tickrate 128
 
@@ -15,7 +15,7 @@ mm_dedicated_search_maxping "350"
 net_client_steamdatagram_enable_override "0"
 
 // Relay Servers [sgp, tyo, hkg, lax, eat, ord]
-sdr SDRClient_ForceRelayCluster ""
+//sdr SDRClient_ForceRelayCluster ""
 
 fps_max "300"
 fps_max_menu "120"
