--- a/train1v1.cfg
+++ b/train1v1.cfg
@@ -1,6 +1,6 @@
 echo
 echo "   ---------------------   "
-echo "   |   Aug. 23, 2018   |   "
+echo "   |   Jan. 04, 2020   |   "
 
 
 game_type 0
@@ -21,6 +21,7 @@ sv_infinite_ammo 0
 sv_regeneration_force_on 0
 
 sv_grenade_trajectory 0
+sv_grenade_trajectory_dash 1
 sv_showimpacts 0
 sv_showimpacts_time 20
 
