--- a/napkinpro.cfg
+++ b/napkinpro.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Feb. 10, 2020   |   "
+echo "   |   Feb. 17, 2020   |   "
 
 // Launch: -freq 240 -novid -tickrate 128 +mat_software_aa_strength 0
 
@@ -186,6 +186,7 @@ cl_righthand "1"
 closeonbuy "1"
 cl_use_opens_buy_menu "0"
 cl_playerspray_auto_apply "1"
+cl_sniper_delay_unscope "0"
 
 cl_scoreboard_mouse_enable_binding "+attack2"
 cl_scoreboard_survivors_always_on "1"
