--- a/csgolow.cfg
+++ b/csgolow.cfg
@@ -1,8 +1,8 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Feb. 10, 2020   |   "
+echo "   |   Feb. 17, 2020   |   "
 
-// Launch: -freq 144 -novid -nojoy -tickrate 128 -disable_d3d9ex +cl_forcepreload 0 +sv_forcepreload 0
+// Launch: -novid -tickrate 128 -disable_d3d9ex
 
 
 ///////////////
@@ -186,6 +186,7 @@ cl_righthand "1"
 closeonbuy "1"
 cl_use_opens_buy_menu "0"
 cl_playerspray_auto_apply "1"
+cl_sniper_delay_unscope "0"
 
 cl_scoreboard_mouse_enable_binding "+attack2"
 cl_scoreboard_survivors_always_on "1"
@@ -396,6 +397,8 @@ cl_obs_interp_enable "1"
 
 gameinstructor_enable "0"
 ui_steam_overlay_notification_position "topright"
+
+triple_monitor_mode "0"
 
 
 ///////////////
