Updated fps_max default value.
Patch Notes: https://blog.counter-strike.net/index.php/2020/02/28730/
Cleaned deprecated crosshair scale convars.

--- a/csgo.cfg
+++ b/csgo.cfg
@@ -1,8 +1,8 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Feb. 17, 2020   |   "
+echo "   |   Feb. 25, 2020   |   "
 
-// Launch: -novid -tickrate 128 -disable_d3d9ex
+// Launch: -novid -disable_d3d9ex
 
 
 ///////////////
@@ -14,8 +14,8 @@ mm_dedicated_search_maxping "300"
 // SDR Override [-1 = UDP, 0 = Auto, 1 = SDR]
 net_client_steamdatagram_enable_override "-1"
 
-fps_max "0"
-fps_max_menu "0"
+fps_max "400"
+fps_max_menu "120"
 
 rate "262144"
 cl_cmdrate "128"
@@ -99,9 +99,6 @@ cl_crosshaircolor "1"
 cl_crosshaircolor_r "250"
 cl_crosshaircolor_g "250"
 cl_crosshaircolor_b "250"
-
-cl_crosshairscale "0"
-cl_scalecrosshair "1"
 
 
 ///////////////
