--- a/napkincsgo.cfg
+++ b/napkincsgo.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Feb. 25, 2020   |   "
+echo "   |   Feb. 26, 2020   |   "
 
 // Launch: -freq 240 -novid +mat_software_aa_strength 0
 
@@ -348,8 +348,8 @@ unbind "F7"
 unbind "F8"
 bind "F9" "toggle net_graph 1 0"
 bind "F10" "quit prompt"
-bind "F11" "exec napkincsgolow.cfg"
-bind "F12" "exec napkincsgo.cfg"
+bind "F11" "mat_setvideomode 1280 960 0 0; exec napkincsgolow.cfg"
+bind "F12" "mat_setvideomode 1920 1080 0 0; exec napkincsgo.cfg"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
 bind "MOUSE3" "+lookatweapon"
