--- a/csgolow.cfg
+++ b/csgolow.cfg
@@ -15,7 +15,7 @@ mm_dedicated_search_maxping "300"
 net_client_steamdatagram_enable_override "-1"
 
 fps_max "500"
-fps_max_menu "120"
+fps_max_menu "500"
 
 rate "262144"
 cl_cmdrate "128"
@@ -348,8 +348,8 @@ bind "F7" "say_team Bomb go A"
 bind "F8" "say_team Bomb go B"
 bind "F9" "toggle net_graph 1 0"
 bind "F10" "quit prompt"
-bind "F11" "exec csgolow.cfg"
-bind "F12" "exec csgo.cfg"
+bind "F11" "mat_setvideomode 1280 960 0 0; exec csgolow.cfg"
+bind "F12" "mat_setvideomode 1920 1080 0 0; exec csgo.cfg"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "lastinv"
 bind "MOUSE3" "+lookatweapon"
@@ -382,7 +382,7 @@ cl_freezecameffects_showholiday "0"
 
 cl_forcepreload "0"
 
-mat_queue_mode "-1"
+mat_queue_mode "2"
 engine_no_focus_sleep "0"
 cpu_frequency_monitoring "0"
 
