Added -fullscreen to launch options.
Added video.txt file.

--- a/csgo.cfg
+++ b/csgo.cfg
@@ -1,8 +1,8 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Feb. 26, 2020   |   "
+echo "   |   Feb. 27, 2020   |   "
 
-// Launch: -novid -disable_d3d9ex
+// Launch: -fullscreen -novid -disable_d3d9ex
 
 
 ///////////////
