Added large CS:S crosshair.
Moved crosshair color bind.

--- a/napkincsgolow.cfg
+++ b/napkincsgolow.cfg
@@ -1,8 +1,8 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Feb. 27, 2020   |   "
+echo "   |   Feb. 29, 2020   |   "
 
-// Launch: -fullscreen -freq 240 -novid +mat_software_aa_strength 0
+// Launch: -nojoy -novid -fullscreen +mat_software_aa_strength 0
 
 
 ///////////////
@@ -270,7 +270,7 @@ bind "e" "slot3"
 bind "f" "incrementvar cl_radar_always_centered 0 1 1; incrementvar cl_radar_scale 0.3 0.7 0.4; incrementvar cl_righthand 0 1 1; incrementvar cl_crosshairdot 0 1 1; incrementvar cl_crosshairgap 0 1 1; incrementvar cl_teamid_overhead_mode 1 2 1"
 bind "g" "drop"
 bind "h" "say_team Drop"
-bind "i" "cl_crosshaircolor 5; toggle cl_crosshaircolor_g 0 100 40 250; toggle cl_crosshaircolor_b 0 60 120 250"
+bind "i" "cl_crosshairdot 1; cl_crosshairgap -1; cl_crosshairsize 5; cl_crosshairstyle 5"
 unbind "j"
 bind "k" "+voicerecord"
 unbind "l"
@@ -305,15 +305,15 @@ bind "KP_MINUS" "say_team Upper"
 bind "KP_PLUS" "say_team Lower"
 bind "KP_ENTER" "buymenu"
 bind "[" "toggle cl_crosshair_sniper_width 2 1"
-bind "]" "toggle cl_crosshairgap 0 -1 1"
+bind "]" "toggle cl_crosshairgap 0 -1 -2 2 1"
 unbind "SEMICOLON"
-unbind "'"
+bind "'" "cl_crosshaircolor 5; toggle cl_crosshaircolor_g 0 100 40 250; toggle cl_crosshaircolor_b 0 60 120 250"
 bind "`" "toggleconsole"
 bind "," "toggle mat_monitorgamma 1.6 2.2 2.6"
 bind "." "toggle hud_scaling 0.5 0.95"
 bind "/" "toggle cl_hud_playercount_showcount 1 0"
 bind "\" "toggle cl_crosshairdot 0 1"
-bind "-" "toggle cl_crosshairsize 2 1 4"
+bind "-" "toggle cl_crosshairsize 2 1 5 4"
 bind "=" "toggle cl_crosshairstyle 2 0 1 5; toggle cl_crosshaircolor 0 3 5 1"
 unbind "ENTER"
 bind "SPACE" "+jump"
