Added disadvantageous r_dynamic 0 for testing.
r_dynamic 0 disables dynamic lighting behind smoke and flames causing it to hinder vision.
cl_join_advertise 2 may allow uninvited lobby guests via Steam profile API.
func_break_max_pieces limits the number of distracting animated effects when breaking objects.

--- a/dylancsgo.cfg
+++ b/dylancsgo.cfg
@@ -1,8 +1,8 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Feb. 25, 2020   |   "
+echo "   |   Mar. 22, 2020   |   "
 
-// Launch: -freq 60 -novid -tickrate 128
+// Launch: -nojoy -novid -tickrate 128
 
 
 ///////////////
@@ -179,6 +179,8 @@ cl_sanitize_player_names "0"
 ///////////////
 
 mat_monitorgamma "2.2"
+mat_monitorgamma_tv_enabled "0"
+mat_powersavingsmode "0"
 
 cl_autowepswitch "0"
 cl_righthand "1"
@@ -209,6 +211,7 @@ cl_bobamt_lat "0.1"
 cl_bobamt_vert "0.1"
 
 r_drawtracers_firstperson "1"
+r_dynamic "0"
 
 
 ///////////////
@@ -377,10 +380,12 @@ cl_allowdownload "1"
 cl_allowupload "1"
 cl_downloadfilter "all"
 cl_showpluginmessages2 "0"
+cl_join_advertise "2"
 
 cl_disablehtmlmotd "1"
 cl_disablefreezecam "1"
 cl_freezecameffects_showholiday "0"
+func_break_max_pieces "0"
 
 cl_forcepreload "0"
 
