--- a/napkincsgolow.cfg
+++ b/napkincsgolow.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Feb. 29, 2020   |   "
+echo "   |   Mar. 22, 2020   |   "
 
 // Launch: -nojoy -novid -fullscreen +mat_software_aa_strength 0
 
@@ -176,6 +176,8 @@ cl_sanitize_player_names "0"
 ///////////////
 
 mat_monitorgamma "2.0"
+mat_monitorgamma_tv_enabled "0"
+mat_powersavingsmode "0"
 
 cl_autowepswitch "0"
 cl_righthand "1"
@@ -211,6 +213,7 @@ cl_bobamt_lat "0.1"
 cl_bobamt_vert "0.1"
 
 r_drawtracers_firstperson "1"
+r_dynamic "1"
 
 
 ///////////////
@@ -379,10 +382,12 @@ cl_allowdownload "1"
 cl_allowupload "1"
 cl_downloadfilter "all"
 cl_showpluginmessages2 "0"
+cl_join_advertise "2"
 
 cl_disablehtmlmotd "1"
 cl_disablefreezecam "1"
 cl_freezecameffects_showholiday "0"
+func_break_max_pieces "0"
 
 cl_forcepreload "0"
 
