Added video configs for testing.

--- a/csgo.cfg
+++ b/csgo.cfg
@@ -225,9 +225,9 @@ zoom_sensitivity_ratio_mouse "1.0"
 //zoom_sensitivity_ratio_joystick "1.0"
 
 cl_mouselook "1"
-joystick "0"
-joystick_force_disabled "1"
-joystick_force_disabled_set_from_options "1"
+//joystick "0"
+//joystick_force_disabled "1"
+//joystick_force_disabled_set_from_options "1"
 
 m_customaccel "0"
 m_customaccel_exponent "1.05"
