--- a/csgolow.cfg
+++ b/csgolow.cfg
@@ -2,7 +2,7 @@ echo "                           "
 echo "   ---------------------   "
 echo "   |   Apr. 30, 2020   |   "
 
-// Launch: -nojoy -novid -disable_d3d9ex
+// Launch: -novid -disable_d3d9ex
 
 
 ///////////////
@@ -222,12 +222,12 @@ r_dynamic "1"
 
 sensitivity "3.3425"
 zoom_sensitivity_ratio_mouse "1.0"
-//zoom_sensitivity_ratio_joystick "1.0"
+zoom_sensitivity_ratio_joystick "1.0"
 
 cl_mouselook "1"
-//joystick "0"
-//joystick_force_disabled "1"
-//joystick_force_disabled_set_from_options "1"
+joystick "0"
+joystick_force_disabled "1"
+joystick_force_disabled_set_from_options "1"
 
 m_customaccel "0"
 m_customaccel_exponent "1.05"
@@ -391,7 +391,7 @@ func_break_max_pieces "0"
 
 cl_forcepreload "0"
 
-mat_queue_mode "2"
+mat_queue_mode "-1"
 engine_no_focus_sleep "0"
 cpu_frequency_monitoring "0"
 
